# update-canna-yubin

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  configure.scan  update-canna-yubin
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
man/: Makefile.am  Makefile.in  update-canna-yubin.1
man/ja/: Makefile.am  Makefile.in  update-canna-yubin.1
